Avance en windows

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body class="flex flex-col min-h-screen">
     <header>
-        <nav class="bg-blue-600 text-lg m-5 p-0.5 rounded-2xl">
+        <nav class="bg-regal-blackstrg text-lg m-5 p-0.5 rounded-2xl">
             <ul class="flex flex-row justify-evenly m-2">
-                <li class="bg-red-400 text-white font-display text-lg rounded-full px-4 py-1">Registrar tareas</li>
-                <li class="bg-green-500 text-white font-display text-lg rounded-full px-4 py-1">Asistencia</li>
-                <li class="bg-blue-300 text-white font-display text-lg rounded-full px-4 py-1">Tareas pasadas</li>
-                <li class="bg-amber-400 text-white font-display text-lg rounded-full px-4 py-1">Reporte individual</li>
-                <li class="bg-rose-300 text-white font-display text-lg rounded-full px-4 py-1">Generar observacion</li>
-                <li class="bg-gray-600 text-white font-display text-lg rounded-full px-4 py-1">Promedios</li>
-                <li class="bg-blue-300 text-white font-display text-lg rounded-full px-4 py-1">Gestionar alumnos</li>
+                <li class="bg-regal-green text-black font-display text-lg rounded-full px-4 py-1">Registrar tareas</li>
+                <li class="text-white font-display text-lg rounded-full px-4 py-1">Asistencia</li>
+                <li class="text-white font-display text-lg rounded-full px-4 py-1">Tareas pasadas</li>
+                <li class="text-white font-display text-lg rounded-full px-4 py-1">Reporte individual</li>
+                <li class="text-white font-display text-lg rounded-full px-4 py-1">Generar observacion</li>
+                <li class="text-white font-display text-lg rounded-full px-4 py-1">Promedios</li>
+                <li class="text-white font-display text-lg rounded-full px-4 py-1">Gestionar alumnos</li>
             </ul>
         </nav>
     </header>
