Avance en dashboard iconos y flex

--- a/index.html
+++ b/index.html
@@ -56,15 +56,50 @@
             </ul>
         </nav>
     </header>
-    <main class="h-full m-6">
-        <section class="grid grid-cols-6 grid-rows-14 gap-6 h-full">
-            <div class="font-oswald font-medium text-3xl tracking-wide col-span-6 row-span-1">Escuela 5 de mayo T.M.</div>
-            <div class="bg-white col-span-2 row-span-4 rounded-xl">General</div>
-            <div class="bg-white col-span-2 row-span-4 rounded-xl">Lectoescritura</div>
-            <div class="bg-white col-span-2 row-span-4 rounded-xl">Matemáticas</div>
-            <div class="bg-white col-span-4 row-span-9 rounded-xl">Students Proficiency</div>
-            <div class="bg-white col-span-2 row-span-4 rounded-xl">Pendientes</div>
-            <div class="bg-white col-span-2 row-span-5 rounded-xl">Attendance</div>
+    <main class="flex flex-col flex-grow">
+        <h2 class="pt-4 pl-4">Escuel  a 5 de mayo T.M.</h2>
+        <section class="grid grid-cols-6 grid-rows-14 gap-6 h-full p-4">
+            <div class="bg-white col-span-2 row-span-4 rounded-xl flex flex-col gap-4">
+                <div class="flex flex-row">
+                    <h2 class="font-oswald ml-3 mt-2 text-lg">General</h2>
+                    <span>
+                        <img class="w-10" src="./src/growth.png" alt="">
+                    </span>
+                </div>
+                <div>
+                    Hola
+                </div>
+            </div>
+            <div class="bg-white col-span-2 row-span-4 rounded-xl flex flex-row gap-4">
+                <h2 class="font-oswald ml-3 mt-2 text-lg">Lectoescritura</h2>
+                <span>
+                    <img class="w-10" src="./src/writing.png" alt="">
+                </span>
+            </div>
+            <div class="bg-white col-span-2 row-span-4 rounded-xl flex flex-row gap-4">
+                <h2 class="font-oswald ml-3 mt-2 text-lg">Matemáticas</h2>
+                <span>
+                    <img class="w-10" src="./src/tools.png" alt="">
+                </span>
+            </div>
+            <div class="bg-white col-span-4 row-span-10 rounded-xl flex flex-row gap-4">
+                <h2 class="font-oswald ml-3 mt-2 text-lg">Students Proficiency</h2>
+                <span>
+                    <img class="w-10" src="./src/graduated.png" alt="">
+                </span>
+            </div>
+            <div class="bg-white col-span-2 row-span-5 rounded-xl flex flex-row gap-4">
+                <h2 class="font-oswald ml-3 mt-2 text-lg">Pendientes</h2>
+                <span>
+                    <img class="w-10" src="./src/pending.png" alt="">
+                </span>
+            </div>
+            <div class="bg-white col-span-2 row-span-5 rounded-xl flex flex-row gap-4">
+                <h2 class="font-oswald ml-3 mt-2 text-lg">Attendance</h2>
+                <span>
+                    <img class="w-10" src="./src/attendance.png" alt="">
+                </span>
+            </div>
         </section>
     </main>
 </body>
