Formulario agregue colores y boton

--- a/registrarTareas.html
+++ b/registrarTareas.html
@@ -16,16 +16,16 @@
                 <fieldset>
                     <legend class="sr-only">Información de la tarea</legend>
                     <div class="flex flex-col gap-2">
-                            <input type="text" placeholder="Nombre actividad" id="nombre" name="nombre" class="border p-2 rounded bg-select-green placeholder-labels-green font-bold font-roboto">
-                            <select id="categoria" name="categoria" class="w-full border border-gray-300 rounded-md px-3 py-2 bg-white focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+                            <input type="text" placeholder="Nombre actividad" id="nombre" name="nombre" class="border border-select-green p-2 rounded-xl bg-select-green placeholder-labels-green font-bold font-roboto focus:border-2 focus:ring-labels-green focus:border-labels-green">
+                            <select id="categoria" name="categoria" class="w-full border border-select-green rounded-xl px-3 py-2 bg-select-green text-labels-green font-bold font-roboto focus:outline-none focus:ring-2 focus:ring-labels-green focus:border-labels-green">
                                 <option value="" disabled selected hidden>Campo Formativo</option>
                                 <option value="Lenguajes">Lenguajes</option>
                                 <option value="Saberes y Pensamiento Científico">Saberes y Pensamiento Científico</option>
                                 <option value="Ética, Naturaleza y Sociedades">Ética, Naturaleza y Sociedades</option>
                                 <option value="De lo Humano a lo Comunitario">De lo Humano a lo Comunitario</option>
                             </select>
-                            <input type="date" placeholder="Hola" id="fecha" name="fecha" class="border p-2 rounded">
-                            <button type="submit" placeholder="Hola" class="bg-blue-500 text-white p-2 rounded">Registrar Tarea</button>
+                            <input type="date" placeholder="Hola" id="fecha" name="fecha" class="border-xl p-2 rounded">
+                            <button type="submit" class="bg-button-green text-black font-bold font-oswald p-2 rounded-3xl">Registrar Tarea</button>
                         </div>
                 </fieldset>
             </form>
