Avance con tabla y disenio

--- a/registrarTareas.html
+++ b/registrarTareas.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="widtd=device-widtd, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/src/output.css">
 </head>
@@ -15,7 +15,7 @@
             <form class="h-full p-4">
                 <fieldset>
                     <legend class="sr-only">Información de la tarea</legend>
-                    <div class="flex flex-col gap-2">
+                    <div class="flex flex-col gap-10">
                             <input type="text" placeholder="Nombre actividad" id="nombre" name="nombre" class="border border-select-green p-2 rounded-xl bg-select-green placeholder-labels-green font-bold font-roboto focus:border-2 focus:ring-labels-green focus:border-labels-green">
                             <select id="categoria" name="categoria" class="w-full border border-select-green rounded-xl px-3 py-2 bg-select-green text-labels-green font-bold font-roboto focus:outline-none focus:ring-2 focus:ring-labels-green focus:border-labels-green">
                                 <option value="" disabled selected hidden>Campo Formativo</option>
@@ -29,13 +29,56 @@
                         </div>
                 </fieldset>
             </form>
-            <img src="" alt="">
+
         </section>
 
-        <section>
-            <div>
-                Hola
-            </div>
+        <section class="h-full w-screen p-12">
+            <table class="h-full w-full border border-labels-green">
+                <tdead>
+                    <tr class="border-b border-labels-green">
+                        <th class="text-left p-2 pl-6">Numero de lista</th>
+                        <th class="text-left">Nombre del alumno</th>
+                        <th class="text-left">Acción</th>
+                    </tr>
+                </tdead>
+                <tbody>
+                    <tr class="border-b border-labels-green">
+                        <td class="p-6">1</td>
+                        <td>Luis Fernando Alvarez Hernandez</td>
+                        <td>
+                            <button class="w-full text-left">Asignar</button>
+                        </td>
+                    </tr>
+                    <tr class="border-b border-labels-green">
+                        <td class="p-6">2</td>
+                        <td>Luis Fernando Alvarez Hernandez</td>
+                        <td>
+                            <button class="w-full text-left">Asignar</button>
+                        </td>
+                    </tr>
+                    <tr class="border-b border-labels-green">
+                        <td class="p-6">3</td>
+                        <td>Luis Fernando Alvarez Hernandez</td>
+                        <td>
+                            <button class="w-full text-left">Asignar</button>
+                        </td>
+                    </tr>
+                    <tr class="border-b border-labels-green">
+                        <td class="p-6">4</td>
+                        <td>Luis Fernando Alvarez Hernandez</td>
+                        <td>
+                            <button class="w-full text-left">Asignar</button>
+                        </td>
+                    </tr>
+                    <tr class="border-b border-labels-green">
+                        <td class="p-6">5</td>
+                        <td>Luis Fernando Alvarez Hernandez</td>
+                        <td>
+                            <button class="w-full text-left">Asignar</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
     </main>
 </body>
