Continuo con pestaña de registrar tareas y linkee dicha pag a index

--- a/registrarTareas.html
+++ b/registrarTareas.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main class="flex flex-row">
-        <section class="flex flex-col p-7">
+        <section class="flex flex-col h-screen p-7">
             <h1 class="p-4 font-oswald text-4xl">
                 Actividades
             </h1>
@@ -29,7 +29,6 @@
                         </div>
                 </fieldset>
             </form>
-
         </section>
 
         <section class="h-full w-screen p-12">
