--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <header class="bg-regal-nav">
         <nav class="text-sm p-0.5 rounded-2xl h-full">
             <ul class="flex flex-row justify-center gap-0.5 m-2 gap-5">
-                <li class="flex items-center gap-1 p-2 hover:bg-regal-green text-black font-roboto text-sm rounded-2xl cursor-pointer">
+                <a href="./registrarTareas.html">
+                    <li class="flex items-center gap-1 p-2 hover:bg-regal-green text-black font-roboto text-sm rounded-2xl cursor-pointer">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10" />
                     </svg>
                     Registrar tareas
                 </li>
+                </a>
                 <li class="flex items-center gap-2 p-2 hover:bg-regal-green text-black font-roboto text-sm rounded-2xl cursor-pointer">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M11.35 3.836c-.065.21-.1.433-.1.664 0 .414.336.75.75.75h4.5a.75.75 0 0 0 .75-.75 2.25 2.25 0 0 0-.1-.664m-5.8 0A2.251 2.251 0 0 1 13.5 2.25H15c1.012 0 1.867.668 2.15 1.586m-5.8 0c-.376.023-.75.05-1.124.08C9.095 4.01 8.25 4.973 8.25 6.108V8.25m8.9-4.414c.376.023.75.05 1.124.08 1.131.094 1.976 1.057 1.976 2.192V16.5A2.25 2.25 0 0 1 18 18.75h-2.25m-7.5-10.5H4.875c-.621 0-1.125.504-1.125 1.125v11.25c0 .621.504 1.125 1.125 1.125h9.75c.621 0 1.125-.504 1.125-1.125V18.75m-7.5-10.5h6.375c.621 0 1.125.504 1.125 1.125v9.375m-8.25-3 1.5 1.5 3-3.75" />
@@ -57,7 +59,7 @@
         </nav>
     </header>
     <main class="flex flex-col flex-grow">
-        <h2 class="pt-4 pl-4">Escuel  a 5 de mayo T.M.</h2>
+        <h2 class="pt-4 pl-4 font-oswald text-2xl">Escuela 5 de mayo T.M.</h2>
         <section class="grid grid-cols-6 grid-rows-14 gap-6 h-full p-4">
             <div class="bg-white col-span-2 row-span-4 rounded-xl flex flex-col gap-4">
                 <div class="flex flex-row">
@@ -67,7 +69,7 @@
                     </span>
                 </div>
                 <div>
-                    Hola
+                    
                 </div>
             </div>
             <div class="bg-white col-span-2 row-span-4 rounded-xl flex flex-row gap-4">
