Avance en formulario para agregar alumno hasta documentos entregados

--- a/gestionaralumnos.html
+++ b/gestionaralumnos.html
@@ -13,7 +13,7 @@
                 <img class="w-10 object-contain ml-14 mt-8" src="./src/logo.png" alt="Imagen de libros">
                 <h1 class="font-oswald text-2xl ml-4 mt-8">ALHER</h1>
             </div>
-            <ul class="h-150 mt-10">
+            <ul class="mt-10">
                 <li class="flex gap-2 font-roboto font-light text-lg ml-14 mt-8 cursor-pointer hover:font-bold">
                     <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-users-plus"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M5 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0" /><path d="M3 21v-2a4 4 0 0 1 4 -4h4c.96 0 1.84 .338 2.53 .901" /><path d="M16 3.13a4 4 0 0 1 0 7.75" /><path d="M16 19h6" /><path d="M19 16v6" /></svg>
                     Agregar alumno
@@ -33,7 +33,7 @@
             </ul>
         </nav>
         <section class="w-screen">
-            <h2 class="font-bold font-urbanist text-3xl ml-32 mt-22">Datos generales del alumno</h2>
+            <h2 class="font-bold font-urbanist text-3xl ml-32 mt-18">Datos generales del alumno</h2>
             <span class="block font-light font-urbanist text-base ml-32 mt-2">Ingresa la información del alumno</span>
             <form action="" class="ml-32 mr-52 mt-6">
                 <fieldset class="border-2 border-black/40 rounded-lg flex flex-col">
@@ -48,6 +48,43 @@
                             <option value="femenino">Femenino</option>
                         </select>
                         <input type="text" placeholder="CURP" id="curp" name="curp" class="rounded-sm p-2 bg-gray-100 font-urbanist outline-blue-400">
+                    </div>
+                </fieldset>
+
+                <fieldset class="border-2 border-black/40 rounded-lg flex flex-col mt-6">
+                    <legend class="ml-8">Padre de familia o tutor</legend>
+                    <div class="grid grid-cols-3 gap-2 gap-x-8 p-4">
+                        <input type="text" placeholder="Nombre" id="nombre" name="nombre" class="rounded-sm p-2 bg-gray-100 font-urbanist outline-blue-400 col-span-2">
+                        <input type="number" placeholder="Teléfono" id="apellidomaterno" name="apellidomaterno" class="rounded-sm p-2 bg-gray-100 font-urbanist outline-blue-400">
+                        <input type="text" placeholder="Patentesco" id="apellidopaterno" name="apellidopaterno" class="rounded-sm p-2 bg-gray-100 font-urbanist outline-blue-400">
+                        <input type="number" placeholder="Teléfono alterno" id="curp" name="curp" class="rounded-sm p-2 bg-gray-100 font-urbanist outline-blue-400">
+                        <input type="text" placeholder="Parentesco alterno" id="curp" name="curp" class="rounded-sm p-2 bg-gray-100 font-urbanist outline-blue-400">
+                    </div>
+                </fieldset>
+
+                <fieldset class="border-2 border-black/40 rounded-lg flex flex-col mt-6">
+                    <legend class="ml-8">Documentos entregados</legend>
+                    <div class="grid grid-cols-3 gap-2 gap-x-8 p-4">
+                        <div class="flex flex-row items-center gap-2">
+                            <input type="checkbox" id="acta" name="acta" class="rounded-sm p-2 bg-gray-100 font-urbanist outline-blue-400">
+                            <label for="acta">Acta de nacimiento</label> 
+                        </div>
+                        <div class="flex flex-row items-center gap-2">
+                            <input type="checkbox" id="curp" name="curp" class="rounded-sm">
+                            <label for="curp">CURP</label>
+                        </div>
+                        <div class="flex flex-row items-center gap-2">
+                            <input type="checkbox" id="ine" name="ine" class="rounded-sm">
+                            <label for="ine">INE</label>
+                        </div>
+                        <div class="flex flex-row items-center gap-2">
+                            <input type="checkbox" id="inealterno" name="intealterno" class="rounded-sm">
+                            <label for="inealterno">INE alterno</label>
+                        </div>
+                        <div class="flex flex-row items-center gap-2 col-span-2">
+                            <input type="checkbox" id="comprobante" name="comprobante" class="rounded-sm">
+                            <label for="comprobante">Comprobante de domicilio</label>
+                        </div>
                     </div>
                 </fieldset>
             </form>
