Actualizacion datos para formularios

--- a/gestionaralumnos.html
+++ b/gestionaralumnos.html
@@ -40,8 +40,8 @@
                     <legend class="ml-8">Alumno</legend>
                     <div class="grid grid-cols-3 gap-2 gap-x-8 p-4">
                         <input type="text" placeholder="Nombre del alumno" id="nombre" name="nombre" class="rounded-sm p-2 bg-gray-100 font-urbanist outline-blue-400">
-                        <input type="text" placeholder="Apellido materno" id="apellidomaterno" name="apellidomaterno" class="rounded-sm p-2 bg-gray-100 font-urbanist outline-blue-400">
                         <input type="text" placeholder="Apellido paterno" id="apellidopaterno" name="apellidopaterno" class="rounded-sm p-2 bg-gray-100 font-urbanist outline-blue-400">
+                        <input type="text" placeholder="Apellido materno" id="apellidomaterno" name="apellidomaterno" class="rounded-sm p-2 bg-gray-100 font-urbanist outline-blue-400">
                         <select name="sexo" id="sexo" class="rounded-sm p-2 bg-gray-100 font-urbanist">
                             <option value="sexo" disabled selected hidden>Sexo</option>
                             <option value="masculino">Masculino</option>
@@ -55,10 +55,10 @@
                     <legend class="ml-8">Padre de familia o tutor</legend>
                     <div class="grid grid-cols-3 gap-2 gap-x-8 p-4">
                         <input type="text" placeholder="Nombre" id="nombre" name="nombre" class="rounded-sm p-2 bg-gray-100 font-urbanist outline-blue-400 col-span-2">
-                        <input type="number" placeholder="Teléfono" id="apellidomaterno" name="apellidomaterno" class="rounded-sm p-2 bg-gray-100 font-urbanist outline-blue-400">
-                        <input type="text" placeholder="Patentesco" id="apellidopaterno" name="apellidopaterno" class="rounded-sm p-2 bg-gray-100 font-urbanist outline-blue-400">
-                        <input type="number" placeholder="Teléfono alterno" id="curp" name="curp" class="rounded-sm p-2 bg-gray-100 font-urbanist outline-blue-400">
-                        <input type="text" placeholder="Parentesco alterno" id="curp" name="curp" class="rounded-sm p-2 bg-gray-100 font-urbanist outline-blue-400">
+                        <input type="number" placeholder="Teléfono" id="telefono" name="telefono" class="rounded-sm p-2 bg-gray-100 font-urbanist outline-blue-400">
+                        <input type="text" placeholder="Patentesco" id="parentesco" name="parentesco" class="rounded-sm p-2 bg-gray-100 font-urbanist outline-blue-400">
+                        <input type="number" placeholder="Teléfono alterno" id="telefonoalterno" name="telefonoalterno" class="rounded-sm p-2 bg-gray-100 font-urbanist outline-blue-400">
+                        <input type="text" placeholder="Parentesco alterno" id="parentescoalterno" name="parentescoalterno" class="rounded-sm p-2 bg-gray-100 font-urbanist outline-blue-400">
                     </div>
                 </fieldset>
 
