--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <nav class="text-sm p-0.5 rounded-2xl h-full">
             <ul class="flex flex-row justify-center gap-0.5 m-2 gap-5">
                 <a href="./registrarTareas.html">
-                    <li class="flex items-center gap-1 p-2 hover:bg-regal-green text-black font-roboto text-sm rounded-2xl cursor-pointer">
+                    <li class="flex items-center gap-10 p-2 hover:bg-regal-green text-black font-roboto text-sm rounded-2xl cursor-pointer">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10" />
                     </svg>
                     Registrar tareas
-                </li>
+                    </li>
                 </a>
                 <li class="flex items-center gap-2 p-2 hover:bg-regal-green text-black font-roboto text-sm rounded-2xl cursor-pointer">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
@@ -49,28 +49,25 @@
                     </svg>
                     Promedios
                 </li>
-                <li class="flex items-center gap-2 p-2 hover:bg-regal-green text-black font-roboto text-sm rounded-2xl cursor-pointer">
+                <a href="./gestionaralumnos.html">
+                    <li class="flex items-center gap-2 p-2 hover:bg-regal-green text-black font-roboto text-sm rounded-2xl cursor-pointer">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M18 7.5v3m0 0v3m0-3h3m-3 0h-3m-2.25-4.125a3.375 3.375 0 1 1-6.75 0 3.375 3.375 0 0 1 6.75 0ZM3 19.235v-.11a6.375 6.375 0 0 1 12.75 0v.109A12.318 12.318 0 0 1 9.374 21c-2.331 0-4.512-.645-6.374-1.766Z" />
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M18 7.5v3m0 0v3m0-3h3m-3 0h-3m-2.25-4.125a3.375 3.375 0 1 1-6.75 0 3.375 3.375 0 0 1 6.75 0ZM3 19.235v-.11a6.375 6.375 0 0 1 12.75 0v.109A12.318 12.318 0 0 1 9.374 21c-2.331 0-4.512-.645-6.374-1.766Z" />
                     </svg>
                     Gestionar alumnos
-                </li>
+                    </li>
+                </a>
             </ul>
         </nav>
     </header>
     <main class="flex flex-col flex-grow">
         <h2 class="pt-4 pl-4 font-oswald text-2xl">Escuela 5 de mayo T.M.</h2>
         <section class="grid grid-cols-6 grid-rows-14 gap-6 h-full p-4">
-            <div class="bg-white col-span-2 row-span-4 rounded-xl flex flex-col gap-4">
-                <div class="flex flex-row">
+            <div class="bg-white col-span-2 row-span-4 rounded-xl flex flex-row gap-4">
                     <h2 class="font-oswald ml-3 mt-2 text-lg">General</h2>
                     <span>
                         <img class="w-10" src="./src/growth.png" alt="">
                     </span>
-                </div>
-                <div>
-                    
-                </div>
             </div>
             <div class="bg-white col-span-2 row-span-4 rounded-xl flex flex-row gap-4">
                 <h2 class="font-oswald ml-3 mt-2 text-lg">Lectoescritura</h2>
