Agrego boton para formulario

--- a/gestionaralumnos.html
+++ b/gestionaralumnos.html
@@ -88,6 +88,10 @@
                         </div>
                     </div>
                 </fieldset>
+                <div class="w-full flex">
+                    <button class="bg-black text-white text-xl font-urbanist rounded-2xl p-2 px-8 mt-6 ml-auto cursor-pointer hover:bg-button-green hover:text-black">Enviar</button>
+                </div>
+                
             </form>
         </section>
     </main>
